--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-dom": "^19.1.1",
     "react-force-graph-2d": "^1.29.0",
     "react-hook-form": "^7.64.0",
+    "react-joyride": "^2.9.3",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.2",
     "sonner": "^2.0.7",
